Minor Update to Tags & testing

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -8,6 +8,10 @@
         <div id="toGrab"></div>
         <hr />
         <div id="recGames"></div>
+        <!-- TODO: Put Room Members to the side of games -->
+        <!-- <div id="roomMembers">
+            <h6> MEMBERS </h6>
+        </div> -->
     </div>
 </body>
 
