--- a/views/test.ejs
+++ b/views/test.ejs
@@ -4,4 +4,5 @@
 
 <div id="toGrab">
     <%- include('partials/gameItem.ejs', {gameName: 'Warframe', gameImage: 'http://cdn.akamai.steamstatic.com/steam/apps/230410/header.jpg', gameLink: 'https://store.steampowered.com/app/230410'}) %>
+    <%- include('partials/gameItem.ejs', {gameName: 'Deus Ex: Game of the Year Edition', gameImage: 'http://cdn.akamai.steamstatic.com/steam/apps/6910/header.jpg', gameLink: 'https://store.steampowered.com/app/6910'}) %>
 </div>
