--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -69,12 +69,14 @@ button:hover {
 }
 
 .gameTag {
+    background-color: #243C4F;
+    font-family: 'Kanit', sans-serif;
     margin-top: 3.5vh;
-    color: white;
-    align-self: flex-end;
-    border: 2px solid white;
-    border-radius: 10px;
-    padding: 4px;
+    letter-spacing: 0.75px;
+    color: #82D3FF;
+    align-self: flex-start;
+    border-radius: 6px;
+    padding: 8px;
 }
 
 .seperator {
