--- a/views/alt-login.ejs
+++ b/views/alt-login.ejs
@@ -1,6 +1,5 @@
 <%- include('partials/header.ejs') %>
-<%- include('partials/navbar.ejs') %>
-<%- include('partials/tempNav.ejs') %>
+<%- include('partials/navbarBack.ejs', {linkToPage: `/`}) %>
 
 <div class="gradient-background">
     <div class="background-box">
