--- a/views/join-room.ejs
+++ b/views/join-room.ejs
@@ -1,6 +1,5 @@
 <%- include('partials/header.ejs') %> 
-<%- include('partials/navbar.ejs') %>
-<%- include('partials/tempNav.ejs') %>
+<%- include('partials/navbarBack.ejs', {linkToPage: `/room-choice`}) %>
 
 <div id="form">
 <form name="join" method="post" action="/join-room" onsubmit="return check()">
