--- a/views/privacy-policy.ejs
+++ b/views/privacy-policy.ejs
@@ -1,5 +1,5 @@
 <%- include('partials/header.ejs') %>
-<%- include('partials/navbar.ejs') %>
+<%- include('partials/navbarBack.ejs', {linkToPage: `/`}) %>
 <%- include('partials/tempNav.ejs') %>
 
 <div class="gradient-background">
