--- a/views/test.ejs
+++ b/views/test.ejs
@@ -6,7 +6,10 @@
         <img class="gameImage" src="http://cdn.akamai.steamstatic.com/steam/apps/230410/header.jpg" alt="Icon for Warframe">
         <div class="seperator">
             <a class="gameTitle" href="https://store.steampowered.com/app/230410"> Warframe </a>
-            <p class="gameTag"> Multiplayer </p>
+            <div class="tagHolder">
+                <p class="gameTag"> Free to Play </p>
+                <p class="gameTag"> Action RPG </p>
+            </div>
         </div>
         <div class="roomMembers">
             <p class="gameMemberText"> NOT OWNED BY </>
