--- a/views/test.ejs
+++ b/views/test.ejs
@@ -9,6 +9,7 @@
             <div class="tagHolder">
                 <p class="gameTag"> Free to Play </p>
                 <p class="gameTag"> Action RPG </p>
+                <p class="normalPrice"> Free </p>
             </div>
         </div>
         <div class="roomMembers">
@@ -19,6 +20,16 @@
         </div>
     </div>
     
-    <%- include('partials/gameItem.ejs', {gameName: 'Deus Ex: Game of the Year Edition', gameImage: 'http://cdn.akamai.steamstatic.com/steam/apps/6910/header.jpg', gameLink: 'https://store.steampowered.com/app/6910'}) %>
+    <div class="gameItem">
+        <img class="gameImage" src="http://cdn.akamai.steamstatic.com/steam/apps/6910/header.jpg" alt="Icon for Deus Ex: Game of the Year Edition">
+        <div class="seperator">
+            <a class="gameTitle" href="https://store.steampowered.com/app/6910"> Deus Ex: Game of the Year Edition </a>
+            <div class="tagHolder">
+                <p class="gameTag"> Action RPG </p>
+                <p class="normalPrice"> $4.99 </p>
+                <p class="fullPrice"> $8.99 </p>
+            </div>
+        </div>
+    </div>
 </div>
 
