Front End Polish & Organization

--- a/views/alt-login.ejs
+++ b/views/alt-login.ejs
@@ -3,19 +3,20 @@
 
 <div class="gradient-background">
     <div class="background-box">
-        <h1>
-            ALT LOGIN PAGE
+        <h1 style="text-decoration: underline;">
+            ALTERNATE LOGIN
         </h1>
         <br>
-        <p> Enter your Steam User ID or ID Code Here </p>
+        <p id="altPageHelp"> Enter your Steam User ID or ID Code Here </p>
         <!-- TODO: Have a guide on how to find it. -->
+        <p id="altPageGuide"> <a href=""> Click Here </a> for a guide on how to find it. </p>
         <!-- TODO: Have some disclaimer and a link to other pages on relevant information -->
         <br>
         <form method="post" action="/alt-login">
             <br>
             <input type="text" id="userId" name="userId">
             <br>
-            <button type="submit">CREATE/JOIN ROOM</button>
+            <button type="submit"> ALT LOGIN </button>
         </form>
     </div>
 </div>
