--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -267,3 +267,23 @@ ul, li {
 #newList {
     font-size: 1.5rem;
 }
+
+/* ===================== "Removable" Tags on List ===================== */
+
+.indivTag {
+    border: 2px white solid;
+    border-radius: 8px;
+    background-color: transparent;
+    padding: 0.1vh 0.5vw;
+    font-size: 1.25rem;
+}
+
+.crossIcon {
+    padding-left: 1vw;
+    height: 3vh;
+    font-size: 1.5rem;
+}
+
+#listPageLayout {
+    
+}
